#83 update pom